--- a/index.html
+++ b/index.html
@@ -3,84 +3,257 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GMH Design Library</title>
+    <title>Kohrt Design System | GMH Design Library</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Web Page</h1>
-    </header>
-    <main>
-        <section>
-            <h2>About Me</h2>
-            <p>This is a brief introduction about myself. I enjoy coding and creating web applications.</p>
+    <div class="container">
+        <!-- Navigation Section -->
+        <nav class="navigation">
+            <div class="nav-buttons">
+                <button class="nav-button active" data-device="desktop">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none">
+                        <rect x="3" y="3" width="18" height="12" rx="2" stroke="currentColor" stroke-width="2"/>
+                        <path d="M8 21h8" stroke="currentColor" stroke-width="2"/>
+                        <path d="M12 17v4" stroke="currentColor" stroke-width="2"/>
+                    </svg>
+                    <span>Desktop</span>
+                </button>
+                <button class="nav-button" data-device="tablet">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none">
+                        <rect x="5" y="2" width="14" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
+                        <path d="M12 18h.01" stroke="currentColor" stroke-width="2"/>
+                    </svg>
+                    <span>Tablet</span>
+                </button>
+                <button class="nav-button" data-device="mobile">
+                    <svg class="nav-icon" viewBox="0 0 24 24" fill="none">
+                        <rect x="7" y="2" width="10" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
+                        <path d="M12 18h.01" stroke="currentColor" stroke-width="2"/>
+                    </svg>
+                    <span>Mobile</span>
+                </button>
+            </div>
+        </nav>
+
+        <!-- Hero Section -->
+        <header class="hero">
+            <div class="hero-content">
+                <div class="hero-labels">
+                    <div class="subtitle">Kohrt, MD, PhD</div>
+                    <div class="title">
+                        <div class="title-line">Design</div>
+                        <div class="title-line">System</div>
+                    </div>
+                </div>
+                <div class="divider"></div>
+                <div class="hero-description">
+                    <p class="description-main">
+                        The single source of truth for all digital materials shared between GMH staff, students, and affiliates.
+                    </p>
+                    <p class="description-sub">
+                        Code-friendly with HTML, CSS and React.
+                    </p>
+                </div>
+            </div>
+        </header>
+
+        <!-- Styles Section -->
+        <section class="styles-section">
+            <div class="section-header">
+                <h2>Styles</h2>
+                <div class="divider"></div>
+                <p class="section-description">
+                    These are the design tokens. Each item represents a variable collection.
+                </p>
+            </div>
+            <div class="cards-grid">
+                <div class="card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#B8C8D8"/>
+                                <circle cx="48" cy="40" r="25" fill="#366382"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Geometry</h3>
+                        <p>Column grids, pixel grids, and spacing</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#B8C8D8"/>
+                                <circle cx="48" cy="40" r="25" fill="#366382"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Typography</h3>
+                        <p>Type faces, font weights, and usage</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#B8C8D8"/>
+                                <circle cx="48" cy="40" r="25" fill="#366382"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Color</h3>
+                        <p>Grayscale, color palettes, and themes</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#B8C8D8"/>
+                                <circle cx="48" cy="40" r="25" fill="#366382"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Elevation</h3>
+                        <p>Shadows, layering, and depth guidance</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#B8C8D8"/>
+                                <circle cx="48" cy="40" r="25" fill="#366382"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Radius</h3>
+                        <p>Border radii guidance</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section>
-            <h2>My Projects</h2>
-            <ul>        
-                <li>Project 1.1: A simple web app</li>
-                <li>Project 2: A mobile application</li>
-                <li>Project 3: An open-source contribution</li>
-            </ul>
+
+        <!-- Components Section -->
+        <section class="components-section">
+            <div class="section-header">
+                <h2>Components</h2>
+                <div class="divider"></div>
+                <p class="section-description">
+                    In line with atomic design principles, these base components are the next level up from granular design tokens.
+                </p>
+            </div>
+            <div class="cards-grid">
+                <div class="card component-card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#AA9868"/>
+                                <circle cx="48" cy="40" r="25" fill="#0190DB"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Buttons</h3>
+                        <p>Sizes, actions, types, and interactions</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card component-card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#AA9868"/>
+                                <circle cx="48" cy="40" r="25" fill="#0190DB"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Forms</h3>
+                        <p>Base inputs, fields, switches, and theming</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card component-card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#AA9868"/>
+                                <circle cx="48" cy="40" r="25" fill="#0190DB"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>Icons</h3>
+                        <p>Iconography: nothing more, nothing less.</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+
+                <div class="card component-card">
+                    <div class="card-image">
+                        <div class="logo-placeholder">
+                            <svg class="logo" viewBox="0 0 96 80" fill="none">
+                                <circle cx="48" cy="40" r="35" fill="#AA9868"/>
+                                <circle cx="48" cy="40" r="25" fill="#0190DB"/>
+                                <circle cx="48" cy="40" r="15" fill="#F8E08E"/>
+                            </svg>
+                        </div>
+                    </div>
+                    <div class="card-content">
+                        <h3>System</h3>
+                        <p>Components to help you document your designs</p>
+                    </div>
+                    <div class="card-actions">
+                        <button class="view-button">View</button>
+                    </div>
+                </div>
+            </div>
         </section>
-    </main>
-    <footer>
-        <p>&copy; 2023 My Web Page</p>
-    </footer>
+    </div>
+
     <script src="script.js"></script>
-</body>
-</html>
-<script>
-    document.addEventListener('DOMContentLoaded', () => {
-        console.log('Document is ready!');
-        const projects = document.querySelectorAll('ul li');
-        projects.forEach(project => {
-            project.addEventListener('click', () => {
-                alert(`You clicked on: ${project.textContent}`);
-            });
-        });
-    });
-</script>
-<link rel="stylesheet" href="styles.css">
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f4f4f4;
-    }
-    header {
-        background-color: #35424a;
-        color: white;            
-        padding: 10px 0;
-        text-align: center;
-    }
-    main {
-        padding: 20px;
-    }
-    section {
-        margin-bottom: 20px;
-    }
-    footer {
-        text-align: center;
-        padding: 10px 0;
-        background-color: #35424a;
-        color: white;
-    }
-    ul {
-        list-style-type: none;
-        padding: 0;   
-    }
-    li {
-        background-color: #e2e2e2;
-        margin: 5px 0;
-        padding: 10px;
-        cursor: pointer;
-    }
-    li:hover {
-        background-color: #d1d1d1;
-    }
-</style>
-<script src="script.js"></script>
 </body>
 </html>
