updated hero fonts

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kohrt Design System | GMH Design Library</title>
+    <title>GMH Design Library | Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -43,7 +43,7 @@
                     <div class="subtitle">Kohrt, MD, PhD</div>
                     <div class="title">
                         <div class="title-line">Design</div>
-                        <div class="title-line">System</div>
+                        <div class="title-line">Library</div>
                     </div>
                 </div>
                 <div class="divider"></div>
