added INNOVATIONS and pages folder

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <p>Webpage layouts for campaigns and conversions</p>
                     </div>
                     <div class="card-actions">
-                        <button class="view-button">View</button>
+                        <button class="view-button" onclick="window.location.href='pages/index.html'">View</button>
                     </div>
                 </div>
 
