added blog and social media forms

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         <p>Stylized articles powered by SEO content structure</p>
                     </div>
                     <div class="card-actions">
-                        <button class="view-button">View</button>
+                        <button class="view-button" onclick="window.location.href='forms.gle/sXTZ2zumbUcQ2HYY6'">View</button>
                     </div>
                 </div>
 
@@ -382,7 +382,7 @@
                         <p>LinkedIn and Bluesky posts optimized for engagement</p>
                     </div>
                     <div class="card-actions">
-                        <button class="view-button">View</button>
+                        <button class="view-button" onclick="window.location.href='forms.gle/JH77unST6d1PQYgu6'">View</button>
                     </div>
                 </div>
 
